--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ section.--savior-overlay-z-index-reset>main[role="main"].--savior-overlay-z-inde
 <body>
   <div class="container">
     <canvas id="pinkboard" width="300" height="500"></canvas>
-    <div><em class="name-of-crush">Bé iu dấu!</em></div>
+    <div><em class="name-of-crush">Bé Hoàn iu dấu!</em></div>
   </div>
   <script>
 
