--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>❤tim tim nè❤</title>
-    <link rel="shortcut icon" href="https://scontent.fdad3-1.fna.fbcdn.net/v/t39.30808-6/307756483_797497991396004_4768473572252917380_n.jpg?stp=cp6_dst-jpg&_nc_cat=103&ccb=1-7&_nc_sid=174925&_nc_ohc=_uSXvw0jLowAX8o5quy&_nc_ht=scontent.fdad3-1.fna&oh=00_AfBfGcNxYirGFdOIWcRplpOZ8xitHz5WfOcNTrhIyabmdg&oe=63715F1C" type="image/x-icon">
+    <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRMauXdI6yBxnCqd7DHk1P3H-agfUND0SL4bw&usqp=CAU" type="image/x-icon">
     <style>
     html,
     body {
@@ -205,8 +205,8 @@ section.--savior-overlay-z-index-reset>main[role="main"].--savior-overlay-z-inde
   </body>
 <body>
   <div class="container">
-    <canvas id="pinkboard" width="300" height="500"></canvas>
-    <div><em class="name-of-crush">Bé Hoàn iu dấu!</em></div>
+    <canvas id="pinkboard" width="500" height="00"></canvas>
+    <div><em class="name-of-crush">Gửi cục cưng iu dấu!</em></div>
   </div>
   <script>
 
