--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       font-size: 20px;
     }
     .name-of-crush{
-      color: #ff0565fd;
+      color: #ff0000;
       font-weight: 700;
       font-size: 28px;
       position: fixed;
@@ -206,7 +206,7 @@ section.--savior-overlay-z-index-reset>main[role="main"].--savior-overlay-z-inde
 <body>
   <div class="container">
     <canvas id="pinkboard" width="500" height="00"></canvas>
-    <div><em class="name-of-crush">Gửi cục cưng iu dấu!</em></div>
+    <div><em class="name-of-crush">Thằng nhóc đáđểđể!</em></div>
   </div>
   <script>
 
@@ -216,11 +216,11 @@ section.--savior-overlay-z-index-reset>main[role="main"].--savior-overlay-z-inde
 
  var settings = {
     particles: {
-      length: 1500, // maximum amount of particles
+      length: 2000, // maximum amount of particles
       duration: 3, // particle duration in sec
       velocity: 70, // particle velocity in pixels/sec
-      effect: -0.9, // play with this for a nice effect
-      size: 10 // particle size in pixels
+      effect: -1, // play with this for a nice effect
+      size:  // particle size in pixels
     }
   };
   /*
