--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ section.--savior-overlay-z-index-reset>main[role="main"].--savior-overlay-z-inde
 <body>
   <div class="container">
     <canvas id="pinkboard" width="500" height="00"></canvas>
-    <div><em class="name-of-crush">Thằng nhóc đáđểđể!</em></div>
+    <div><em class="name-of-crush">Thằng nhóc đáo để!</em></div>
   </div>
   <script>
 
