--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ section.--savior-overlay-z-index-reset>main[role="main"].--savior-overlay-z-inde
       duration: 3, // particle duration in sec
       velocity: 70, // particle velocity in pixels/sec
       effect: -1, // play with this for a nice effect
-      size:  // particle size in pixels
+      size: 15 // particle size in pixels
     }
   };
   /*
