--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>❤tim tim nè❤</title>
+    <title>❤CỤC CƯNG❤</title>
     <link rel="shortcut icon" href="https://scontent.fdad3-1.fna.fbcdn.net/v/t39.30808-6/307756483_797497991396004_4768473572252917380_n.jpg?stp=cp6_dst-jpg&_nc_cat=103&ccb=1-7&_nc_sid=174925&_nc_ohc=f6a1DneCEmIAX8PRR6r&_nc_ht=scontent.fdad3-1.fna&oh=00_AfDiftmJHRlJHOBulIPJoTMV00-qdkm9gvUV1cRwQOLyAw&oe=6373595C" type="image/x-icon">
     <style>
     html,
-    body {
+    body{
       height: 100%;
       padding: 0;
       margin: 0;
-      background: rgb(256, 196, 196);
+      background: rgb(252, 225, 168);
     }
 
     .container {
@@ -24,7 +24,7 @@
     canvas {
       width: 100%;
       height: 100%;
-      animation: zoom 3s infinite ease-in-out;
+      animation: zoom 1s infinite ease-in-out;
     }
 
     @keyframes zoom {
@@ -33,7 +33,7 @@
       }
 
       50% {
-        transform: scale(1.2);
+        transform: scale(1.1);
       }
 
       100% {
@@ -42,14 +42,14 @@
     }
 
     .msg {
-      color: #fff;
+      color: rgb(255, 255, 255);
       text-align: center;
       font-size: 20px;
     }
     .name-of-crush{
       color: #ff0000;
       font-weight: 700;
-      font-size: 28px;
+      font-size: 30px;
       position: fixed;
       top: 45%;
       left: 50%;
@@ -113,8 +113,8 @@ main.--savior-overlay-z-index-top .video-player-hosting-ui__container + div {
 }
 .--savior-overlay-twitter-video-player {
   position: fixed;
-  width: 80%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
   top: 10%;
   left: 10%;
 }
@@ -198,15 +198,9 @@ section.--savior-overlay-z-index-reset>main[role="main"].--savior-overlay-z-inde
   }
 }
 </style></head>
-<body>
-    <audio autoplay loop>
-      <source src="https://nhacpro.me/bai-hat/cuppy-cake-nhac-chuong-strawberry-shortcake.5ch3.html" type="audio/mpeg">
-    </audio>
-  </body>
-<body>
   <div class="container">
-    <canvas id="pinkboard" width="500" height="00"></canvas>
-    <div><em class="name-of-crush">Thằng nhóc đáo để!</em></div>
+    <canvas id="pinkboard" width="500" height="500"></canvas>
+    <div><em class="name-of-crush">Tặng nhóc đáo !</em></div>
   </div>
   <script>
 
@@ -216,7 +210,7 @@ section.--savior-overlay-z-index-reset>main[role="main"].--savior-overlay-z-inde
 
  var settings = {
     particles: {
-      length: 2000, // maximum amount of particles
+      length: 1500, // maximum amount of particles
       duration: 3, // particle duration in sec
       velocity: 70, // particle velocity in pixels/sec
       effect: -1, // play with this for a nice effect
