--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>❤CỤC CƯNG❤</title>
+    <title>❤ tim tim nè❤</title>
     <link rel="shortcut icon" href="https://scontent.fdad3-1.fna.fbcdn.net/v/t39.30808-6/307756483_797497991396004_4768473572252917380_n.jpg?stp=cp6_dst-jpg&_nc_cat=103&ccb=1-7&_nc_sid=174925&_nc_ohc=f6a1DneCEmIAX8PRR6r&_nc_ht=scontent.fdad3-1.fna&oh=00_AfDiftmJHRlJHOBulIPJoTMV00-qdkm9gvUV1cRwQOLyAw&oe=6373595C" type="image/x-icon">
     <style>
     html,
@@ -11,7 +11,7 @@
       height: 100%;
       padding: 0;
       margin: 0;
-      background: rgb(252, 225, 168);
+      background: rgb(255, 196, 188);
     }
 
     .container {
@@ -200,7 +200,7 @@ section.--savior-overlay-z-index-reset>main[role="main"].--savior-overlay-z-inde
 </style></head>
   <div class="container">
     <canvas id="pinkboard" width="500" height="500"></canvas>
-    <div><em class="name-of-crush">Tặng nhóc đáo !</em></div>
+    <div><em class="name-of-crush">Tặng nhóc đáo để!</em></div>
   </div>
   <script>
 
