--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ section.--savior-overlay-z-index-reset>main[role="main"].--savior-overlay-z-inde
 </style></head>
   <div class="container">
     <canvas id="pinkboard" width="500" height="500"></canvas>
-    <div><em class="name-of-crush">Tặng nhóc đáo để!</em></div>
+    <div><em class="name-of-crush">Nhóc đáo để!</em></div>
   </div>
   <script>
 
